--- a/examples/2afc/.bonsai/Bonsai.config
+++ b/examples/2afc/.bonsai/Bonsai.config
@@ -5,7 +5,8 @@
     <Package id="Bonsai" version="2.9.0" />
     <Package id="Bonsai.Core" version="2.9.0" />
     <Package id="Bonsai.Design" version="2.9.0" />
-    <Package id="Bonsai.Dsp" version="2.8.0" />
+    <Package id="Bonsai.Design.Visualizers" version="2.9.0" />
+    <Package id="Bonsai.Dsp" version="2.9.0" />
     <Package id="Bonsai.Editor" version="2.9.0" />
     <Package id="Bonsai.Harp" version="3.6.1" />
     <Package id="Bonsai.Harp.Design" version="3.6.1" />
@@ -16,7 +17,8 @@
     <Package id="Bonsai.Shaders.Rendering" version="0.3.1" />
     <Package id="Bonsai.System" version="2.9.0" />
     <Package id="Bonsai.System.Design" version="2.8.0" />
-    <Package id="Bonsai.Vision" version="2.8.1" />
+    <Package id="Bonsai.Vision" version="2.9.0" />
+    <Package id="Bonsai.Vision.Design" version="2.9.0" />
     <Package id="Bonsai.VR" version="0.6.0" />
     <Package id="BonVision" version="0.12.0" />
     <Package id="DockPanelSuite" version="3.1.1" />
@@ -30,6 +32,7 @@
     <Package id="Microsoft.Web.WebView2" version="1.0.2792.45" />
     <Package id="OpenCV.Net" version="3.4.2" />
     <Package id="OpenTK" version="3.1.0" />
+    <Package id="OpenTK.GLControl" version="3.1.0" />
     <Package id="Rx-Core" version="2.2.5" />
     <Package id="Rx-Interfaces" version="2.2.5" />
     <Package id="Rx-Linq" version="2.2.5" />
@@ -42,11 +45,13 @@
     <Package id="System.Resources.Extensions" version="8.0.0" />
     <Package id="System.Runtime.CompilerServices.Unsafe" version="6.1.0" />
     <Package id="YamlDotNet" version="16.3.0" />
+    <Package id="ZedGraph" version="5.1.7" />
   </Packages>
   <AssemblyReferences>
     <AssemblyReference assemblyName="Bonsai" />
     <AssemblyReference assemblyName="Bonsai.Core" />
     <AssemblyReference assemblyName="Bonsai.Design" />
+    <AssemblyReference assemblyName="Bonsai.Design.Visualizers" />
     <AssemblyReference assemblyName="Bonsai.Dsp" />
     <AssemblyReference assemblyName="Bonsai.Editor" />
     <AssemblyReference assemblyName="Bonsai.Harp" />
@@ -59,6 +64,7 @@
     <AssemblyReference assemblyName="Bonsai.System" />
     <AssemblyReference assemblyName="Bonsai.System.Design" />
     <AssemblyReference assemblyName="Bonsai.Vision" />
+    <AssemblyReference assemblyName="Bonsai.Vision.Design" />
     <AssemblyReference assemblyName="Bonsai.VR" />
     <AssemblyReference assemblyName="BonVision" />
     <AssemblyReference assemblyName="Harp.Behavior" />
@@ -69,7 +75,8 @@
     <AssemblyLocation assemblyName="Bonsai" processorArchitecture="MSIL" location="Packages/Bonsai.2.9.0/lib/net48/Bonsai.exe" />
     <AssemblyLocation assemblyName="Bonsai.Core" processorArchitecture="MSIL" location="Packages/Bonsai.Core.2.9.0/lib/net472/Bonsai.Core.dll" />
     <AssemblyLocation assemblyName="Bonsai.Design" processorArchitecture="MSIL" location="Packages/Bonsai.Design.2.9.0/lib/net472/Bonsai.Design.dll" />
-    <AssemblyLocation assemblyName="Bonsai.Dsp" processorArchitecture="MSIL" location="Packages/Bonsai.Dsp.2.8.0/lib/net462/Bonsai.Dsp.dll" />
+    <AssemblyLocation assemblyName="Bonsai.Design.Visualizers" processorArchitecture="MSIL" location="Packages/Bonsai.Design.Visualizers.2.9.0/lib/net472/Bonsai.Design.Visualizers.dll" />
+    <AssemblyLocation assemblyName="Bonsai.Dsp" processorArchitecture="MSIL" location="Packages/Bonsai.Dsp.2.9.0/lib/net472/Bonsai.Dsp.dll" />
     <AssemblyLocation assemblyName="Bonsai.Editor" processorArchitecture="MSIL" location="Packages/Bonsai.Editor.2.9.0/lib/net472/Bonsai.Editor.dll" />
     <AssemblyLocation assemblyName="Bonsai.Harp" processorArchitecture="MSIL" location="Packages/Bonsai.Harp.3.6.1/lib/net462/Bonsai.Harp.dll" />
     <AssemblyLocation assemblyName="Bonsai.Harp.Design" processorArchitecture="MSIL" location="Packages/Bonsai.Harp.Design.3.6.1/lib/net462/Bonsai.Harp.Design.dll" />
@@ -80,7 +87,8 @@
     <AssemblyLocation assemblyName="Bonsai.Shaders.Rendering" processorArchitecture="MSIL" location="Packages/Bonsai.Shaders.Rendering.0.3.1/lib/net462/Bonsai.Shaders.Rendering.dll" />
     <AssemblyLocation assemblyName="Bonsai.System" processorArchitecture="MSIL" location="Packages/Bonsai.System.2.9.0/lib/net472/Bonsai.System.dll" />
     <AssemblyLocation assemblyName="Bonsai.System.Design" processorArchitecture="MSIL" location="Packages/Bonsai.System.Design.2.8.0/lib/net462/Bonsai.System.Design.dll" />
-    <AssemblyLocation assemblyName="Bonsai.Vision" processorArchitecture="MSIL" location="Packages/Bonsai.Vision.2.8.1/lib/net462/Bonsai.Vision.dll" />
+    <AssemblyLocation assemblyName="Bonsai.Vision" processorArchitecture="MSIL" location="Packages/Bonsai.Vision.2.9.0/lib/net472/Bonsai.Vision.dll" />
+    <AssemblyLocation assemblyName="Bonsai.Vision.Design" processorArchitecture="MSIL" location="Packages/Bonsai.Vision.Design.2.9.0/lib/net472/Bonsai.Vision.Design.dll" />
     <AssemblyLocation assemblyName="Bonsai.VR" processorArchitecture="MSIL" location="Packages/Bonsai.VR.0.6.0/lib/net45/Bonsai.VR.dll" />
     <AssemblyLocation assemblyName="BonVision" processorArchitecture="MSIL" location="Packages/BonVision.0.12.0/lib/net462/BonVision.dll" />
     <AssemblyLocation assemblyName="Harp.Behavior" processorArchitecture="MSIL" location="Packages/Harp.Behavior.0.2.0/lib/net462/Harp.Behavior.dll" />
@@ -93,6 +101,7 @@
     <AssemblyLocation assemblyName="Microsoft.Web.WebView2.Wpf" processorArchitecture="MSIL" location="Packages/Microsoft.Web.WebView2.1.0.2792.45/lib/net462/Microsoft.Web.WebView2.Wpf.dll" />
     <AssemblyLocation assemblyName="OpenCV.Net" processorArchitecture="MSIL" location="Packages/OpenCV.Net.3.4.2/lib/net462/OpenCV.Net.dll" />
     <AssemblyLocation assemblyName="OpenTK" processorArchitecture="MSIL" location="Packages/OpenTK.3.1.0/lib/net20/OpenTK.dll" />
+    <AssemblyLocation assemblyName="OpenTK.GLControl" processorArchitecture="MSIL" location="Packages/OpenTK.GLControl.3.1.0/lib/net20/OpenTK.GLControl.dll" />
     <AssemblyLocation assemblyName="ScintillaNET" processorArchitecture="MSIL" location="Packages/jacobslusser.ScintillaNET.3.6.3/lib/net40/ScintillaNET.dll" />
     <AssemblyLocation assemblyName="SVG" processorArchitecture="MSIL" location="Packages/SvgNet.3.5.0/lib/net462/SVG.dll" />
     <AssemblyLocation assemblyName="System.Buffers" processorArchitecture="MSIL" location="Packages/System.Buffers.4.6.0/lib/net462/System.Buffers.dll" />
@@ -108,6 +117,7 @@
     <AssemblyLocation assemblyName="WeifenLuo.WinFormsUI.Docking" processorArchitecture="MSIL" location="Packages/DockPanelSuite.3.1.1/lib/net40/WeifenLuo.WinFormsUI.Docking.dll" />
     <AssemblyLocation assemblyName="WeifenLuo.WinFormsUI.Docking.ThemeVS2015" processorArchitecture="MSIL" location="Packages/DockPanelSuite.ThemeVS2015.3.1.1/lib/net40/WeifenLuo.WinFormsUI.Docking.ThemeVS2015.dll" />
     <AssemblyLocation assemblyName="YamlDotNet" processorArchitecture="MSIL" location="Packages/YamlDotNet.16.3.0/lib/net47/YamlDotNet.dll" />
+    <AssemblyLocation assemblyName="ZedGraph" processorArchitecture="MSIL" location="Packages/ZedGraph.5.1.7/lib/net35-Client/ZedGraph.dll" />
   </AssemblyLocations>
   <LibraryFolders>
     <LibraryFolder path="../../../lib" platform="x64" />
