--- a/examples/PanTilt/.bonsai/Bonsai.config
+++ b/examples/PanTilt/.bonsai/Bonsai.config
@@ -14,8 +14,18 @@
     <Package id="Bonsai.Editor" version="2.9.0" />
     <Package id="Bonsai.Gui" version="0.2.0" />
     <Package id="Bonsai.Gui.ZedGraph" version="0.2.0" />
+    <Package id="Bonsai.ML" version="0.4.2-rc.1" />
+    <Package id="Bonsai.ML.Data" version="0.4.2-rc.1" />
+    <Package id="Bonsai.ML.Design" version="0.4.2-rc.1" />
+    <Package id="Bonsai.ML.Lds.Python" version="0.4.2-rc.1" />
+    <Package id="Bonsai.ML.Lds.Python.Design" version="0.4.2-rc.1" />
+    <Package id="Bonsai.ML.Lds.Torch" version="0.4.2-rc.1" />
+    <Package id="Bonsai.ML.Lds.Torch.Design" version="0.4.2-rc.1" />
+    <Package id="Bonsai.ML.Python" version="0.4.2-rc.1" />
+    <Package id="Bonsai.ML.Torch" version="0.4.2-rc.1" />
     <Package id="Bonsai.Numerics" version="0.9.0" />
     <Package id="Bonsai.Scripting.Expressions" version="2.8.0" />
+    <Package id="Bonsai.Scripting.Python" version="0.3.0" />
     <Package id="Bonsai.Shaders" version="0.27.1" />
     <Package id="Bonsai.Shaders.Design" version="0.27.0" />
     <Package id="Bonsai.Shaders.Rendering" version="0.3.1" />
@@ -29,25 +39,42 @@
     <Package id="BonVision" version="0.12.0" />
     <Package id="DockPanelSuite" version="3.1.1" />
     <Package id="DockPanelSuite.ThemeVS2015" version="3.1.1" />
+    <Package id="Google.Protobuf" version="3.21.9" />
     <Package id="jacobslusser.ScintillaNET" version="3.6.3" />
     <Package id="Markdig" version="0.41.1" />
-    <Package id="MathNet.Numerics" version="4.15.0" />
+    <Package id="MathNet.Numerics" version="5.0.0" />
+    <Package id="Microsoft.CSharp" version="4.7.0" />
     <Package id="Microsoft.Web.WebView2" version="1.0.2792.45" />
+    <Package id="Newtonsoft.Json" version="13.0.3" />
     <Package id="OpenCV.Net" version="3.4.2" />
     <Package id="OpenTK" version="3.1.0" />
     <Package id="OpenTK.GLControl" version="3.1.0" />
+    <Package id="OxyPlot.Core" version="2.1.2" />
+    <Package id="OxyPlot.WindowsForms" version="2.1.2" />
+    <Package id="pythonnet" version="3.0.5" />
     <Package id="Rx-Core" version="2.2.5" />
     <Package id="Rx-Interfaces" version="2.2.5" />
     <Package id="Rx-Linq" version="2.2.5" />
     <Package id="Rx-PlatformServices" version="2.2.5" />
+    <Package id="SharpZipLib" version="1.4.0" />
+    <Package id="SkiaSharp" version="2.88.6" />
+    <Package id="SkiaSharp.NativeAssets.Linux.NoDependencies" version="2.88.6" />
+    <Package id="SkiaSharp.NativeAssets.macOS" version="2.88.6" />
+    <Package id="SkiaSharp.NativeAssets.Win32" version="2.88.6" />
     <Package id="SvgNet" version="3.5.0" />
     <Package id="System.Buffers" version="4.6.0" />
     <Package id="System.Linq.Dynamic" version="1.0.7" />
     <Package id="System.Memory" version="4.6.0" />
     <Package id="System.Numerics.Vectors" version="4.6.0" />
+    <Package id="System.Reactive" version="6.1.0" />
+    <Package id="System.Reflection.Emit" version="4.3.0" />
     <Package id="System.Resources.Extensions" version="8.0.0" />
     <Package id="System.Runtime.CompilerServices.Unsafe" version="6.1.0" />
+    <Package id="System.Threading.Tasks.Extensions" version="4.5.4" />
+    <Package id="TorchSharp" version="0.105.0" />
+    <Package id="TorchVision" version="0.105.0" />
     <Package id="YamlDotNet" version="16.3.0" />
+    <Package id="Yolo.Torch" version="1.0.0" />
     <Package id="ZedGraph" version="5.1.7" />
   </Packages>
   <AssemblyReferences>
@@ -60,8 +87,18 @@
     <AssemblyReference assemblyName="Bonsai.Editor" />
     <AssemblyReference assemblyName="Bonsai.Gui" />
     <AssemblyReference assemblyName="Bonsai.Gui.ZedGraph" />
+    <AssemblyReference assemblyName="Bonsai.ML" />
+    <AssemblyReference assemblyName="Bonsai.ML.Data" />
+    <AssemblyReference assemblyName="Bonsai.ML.Design" />
+    <AssemblyReference assemblyName="Bonsai.ML.Lds.Python" />
+    <AssemblyReference assemblyName="Bonsai.ML.Lds.Python.Design" />
+    <AssemblyReference assemblyName="Bonsai.ML.Lds.Torch" />
+    <AssemblyReference assemblyName="Bonsai.ML.Lds.Torch.Design" />
+    <AssemblyReference assemblyName="Bonsai.ML.Python" />
+    <AssemblyReference assemblyName="Bonsai.ML.Torch" />
     <AssemblyReference assemblyName="Bonsai.Numerics" />
     <AssemblyReference assemblyName="Bonsai.Scripting.Expressions" />
+    <AssemblyReference assemblyName="Bonsai.Scripting.Python" />
     <AssemblyReference assemblyName="Bonsai.Shaders" />
     <AssemblyReference assemblyName="Bonsai.Shaders.Design" />
     <AssemblyReference assemblyName="Bonsai.Shaders.Rendering" />
@@ -73,6 +110,7 @@
     <AssemblyReference assemblyName="Bonsai.Vision.Design" />
     <AssemblyReference assemblyName="Bonsai.VR" />
     <AssemblyReference assemblyName="BonVision" />
+    <AssemblyReference assemblyName="Yolo.Torch" />
   </AssemblyReferences>
   <AssemblyLocations>
     <AssemblyLocation assemblyName="AForge" processorArchitecture="MSIL" location="Packages/AForge.2.2.5/lib/AForge.dll" />
@@ -88,8 +126,18 @@
     <AssemblyLocation assemblyName="Bonsai.Editor" processorArchitecture="MSIL" location="Packages/Bonsai.Editor.2.9.0/lib/net472/Bonsai.Editor.dll" />
     <AssemblyLocation assemblyName="Bonsai.Gui" processorArchitecture="MSIL" location="Packages/Bonsai.Gui.0.2.0/lib/net472/Bonsai.Gui.dll" />
     <AssemblyLocation assemblyName="Bonsai.Gui.ZedGraph" processorArchitecture="MSIL" location="Packages/Bonsai.Gui.ZedGraph.0.2.0/lib/net472/Bonsai.Gui.ZedGraph.dll" />
+    <AssemblyLocation assemblyName="Bonsai.ML" processorArchitecture="MSIL" location="Packages/Bonsai.ML.0.4.2-rc.1/lib/net472/Bonsai.ML.dll" />
+    <AssemblyLocation assemblyName="Bonsai.ML.Data" processorArchitecture="MSIL" location="Packages/Bonsai.ML.Data.0.4.2-rc.1/lib/net472/Bonsai.ML.Data.dll" />
+    <AssemblyLocation assemblyName="Bonsai.ML.Design" processorArchitecture="MSIL" location="Packages/Bonsai.ML.Design.0.4.2-rc.1/lib/net472/Bonsai.ML.Design.dll" />
+    <AssemblyLocation assemblyName="Bonsai.ML.Lds.Python" processorArchitecture="MSIL" location="Packages/Bonsai.ML.Lds.Python.0.4.2-rc.1/lib/net472/Bonsai.ML.Lds.Python.dll" />
+    <AssemblyLocation assemblyName="Bonsai.ML.Lds.Python.Design" processorArchitecture="MSIL" location="Packages/Bonsai.ML.Lds.Python.Design.0.4.2-rc.1/lib/net472/Bonsai.ML.Lds.Python.Design.dll" />
+    <AssemblyLocation assemblyName="Bonsai.ML.Lds.Torch" processorArchitecture="MSIL" location="Packages/Bonsai.ML.Lds.Torch.0.4.2-rc.1/lib/net472/Bonsai.ML.Lds.Torch.dll" />
+    <AssemblyLocation assemblyName="Bonsai.ML.Lds.Torch.Design" processorArchitecture="MSIL" location="Packages/Bonsai.ML.Lds.Torch.Design.0.4.2-rc.1/lib/net472/Bonsai.ML.Lds.Torch.Design.dll" />
+    <AssemblyLocation assemblyName="Bonsai.ML.Python" processorArchitecture="MSIL" location="Packages/Bonsai.ML.Python.0.4.2-rc.1/lib/net472/Bonsai.ML.Python.dll" />
+    <AssemblyLocation assemblyName="Bonsai.ML.Torch" processorArchitecture="MSIL" location="Packages/Bonsai.ML.Torch.0.4.2-rc.1/lib/net472/Bonsai.ML.Torch.dll" />
     <AssemblyLocation assemblyName="Bonsai.Numerics" processorArchitecture="MSIL" location="Packages/Bonsai.Numerics.0.9.0/lib/net462/Bonsai.Numerics.dll" />
     <AssemblyLocation assemblyName="Bonsai.Scripting.Expressions" processorArchitecture="MSIL" location="Packages/Bonsai.Scripting.Expressions.2.8.0/lib/net462/Bonsai.Scripting.Expressions.dll" />
+    <AssemblyLocation assemblyName="Bonsai.Scripting.Python" processorArchitecture="MSIL" location="Packages/Bonsai.Scripting.Python.0.3.0/lib/net472/Bonsai.Scripting.Python.dll" />
     <AssemblyLocation assemblyName="Bonsai.Shaders" processorArchitecture="MSIL" location="Packages/Bonsai.Shaders.0.27.1/lib/net462/Bonsai.Shaders.dll" />
     <AssemblyLocation assemblyName="Bonsai.Shaders.Design" processorArchitecture="MSIL" location="Packages/Bonsai.Shaders.Design.0.27.0/lib/net462/Bonsai.Shaders.Design.dll" />
     <AssemblyLocation assemblyName="Bonsai.Shaders.Rendering" processorArchitecture="MSIL" location="Packages/Bonsai.Shaders.Rendering.0.3.1/lib/net462/Bonsai.Shaders.Rendering.dll" />
@@ -101,29 +149,41 @@
     <AssemblyLocation assemblyName="Bonsai.Vision.Design" processorArchitecture="MSIL" location="Packages/Bonsai.Vision.Design.2.9.0/lib/net472/Bonsai.Vision.Design.dll" />
     <AssemblyLocation assemblyName="Bonsai.VR" processorArchitecture="MSIL" location="Packages/Bonsai.VR.0.6.0/lib/net45/Bonsai.VR.dll" />
     <AssemblyLocation assemblyName="BonVision" processorArchitecture="MSIL" location="Packages/BonVision.0.12.0/lib/net462/BonVision.dll" />
+    <AssemblyLocation assemblyName="Google.Protobuf" processorArchitecture="MSIL" location="Packages/Google.Protobuf.3.21.9/lib/net45/Google.Protobuf.dll" />
+    <AssemblyLocation assemblyName="ICSharpCode.SharpZipLib" processorArchitecture="MSIL" location="Packages/SharpZipLib.1.4.0/lib/netstandard2.0/ICSharpCode.SharpZipLib.dll" />
     <AssemblyLocation assemblyName="Markdig" processorArchitecture="MSIL" location="Packages/Markdig.0.41.1/lib/net462/Markdig.dll" />
-    <AssemblyLocation assemblyName="MathNet.Numerics" processorArchitecture="MSIL" location="Packages/MathNet.Numerics.4.15.0/lib/net461/MathNet.Numerics.dll" />
+    <AssemblyLocation assemblyName="MathNet.Numerics" processorArchitecture="MSIL" location="Packages/MathNet.Numerics.5.0.0/lib/net48/MathNet.Numerics.dll" />
     <AssemblyLocation assemblyName="Microsoft.Web.WebView2.Core" processorArchitecture="MSIL" location="Packages/Microsoft.Web.WebView2.1.0.2792.45/lib/net462/Microsoft.Web.WebView2.Core.dll" />
     <AssemblyLocation assemblyName="Microsoft.Web.WebView2.WinForms" processorArchitecture="MSIL" location="Packages/Microsoft.Web.WebView2.1.0.2792.45/lib/net462/Microsoft.Web.WebView2.WinForms.dll" />
     <AssemblyLocation assemblyName="Microsoft.Web.WebView2.Wpf" processorArchitecture="MSIL" location="Packages/Microsoft.Web.WebView2.1.0.2792.45/lib/net462/Microsoft.Web.WebView2.Wpf.dll" />
+    <AssemblyLocation assemblyName="Newtonsoft.Json" processorArchitecture="MSIL" location="Packages/Newtonsoft.Json.13.0.3/lib/net45/Newtonsoft.Json.dll" />
     <AssemblyLocation assemblyName="OpenCV.Net" processorArchitecture="MSIL" location="Packages/OpenCV.Net.3.4.2/lib/net462/OpenCV.Net.dll" />
     <AssemblyLocation assemblyName="OpenTK" processorArchitecture="MSIL" location="Packages/OpenTK.3.1.0/lib/net20/OpenTK.dll" />
     <AssemblyLocation assemblyName="OpenTK.GLControl" processorArchitecture="MSIL" location="Packages/OpenTK.GLControl.3.1.0/lib/net20/OpenTK.GLControl.dll" />
+    <AssemblyLocation assemblyName="OxyPlot" processorArchitecture="MSIL" location="Packages/OxyPlot.Core.2.1.2/lib/net45/OxyPlot.dll" />
+    <AssemblyLocation assemblyName="OxyPlot.WindowsForms" processorArchitecture="MSIL" location="Packages/OxyPlot.WindowsForms.2.1.2/lib/net45/OxyPlot.WindowsForms.dll" />
+    <AssemblyLocation assemblyName="Python.Runtime" processorArchitecture="MSIL" location="Packages/pythonnet.3.0.5/lib/netstandard2.0/Python.Runtime.dll" />
     <AssemblyLocation assemblyName="ScintillaNET" processorArchitecture="MSIL" location="Packages/jacobslusser.ScintillaNET.3.6.3/lib/net40/ScintillaNET.dll" />
+    <AssemblyLocation assemblyName="SkiaSharp" processorArchitecture="MSIL" location="Packages/SkiaSharp.2.88.6/lib/net462/SkiaSharp.dll" />
     <AssemblyLocation assemblyName="SVG" processorArchitecture="MSIL" location="Packages/SvgNet.3.5.0/lib/net462/SVG.dll" />
     <AssemblyLocation assemblyName="System.Buffers" processorArchitecture="MSIL" location="Packages/System.Buffers.4.6.0/lib/net462/System.Buffers.dll" />
     <AssemblyLocation assemblyName="System.Linq.Dynamic" processorArchitecture="MSIL" location="Packages/System.Linq.Dynamic.1.0.7/lib/net40/System.Linq.Dynamic.dll" />
     <AssemblyLocation assemblyName="System.Memory" processorArchitecture="MSIL" location="Packages/System.Memory.4.6.0/lib/net462/System.Memory.dll" />
     <AssemblyLocation assemblyName="System.Numerics.Vectors" processorArchitecture="MSIL" location="Packages/System.Numerics.Vectors.4.6.0/lib/net462/System.Numerics.Vectors.dll" />
+    <AssemblyLocation assemblyName="System.Reactive" processorArchitecture="MSIL" location="Packages/System.Reactive.6.1.0/lib/net472/System.Reactive.dll" />
     <AssemblyLocation assemblyName="System.Reactive.Core" processorArchitecture="MSIL" location="Packages/Rx-Core.2.2.5/lib/net45/System.Reactive.Core.dll" />
     <AssemblyLocation assemblyName="System.Reactive.Interfaces" processorArchitecture="MSIL" location="Packages/Rx-Interfaces.2.2.5/lib/net45/System.Reactive.Interfaces.dll" />
     <AssemblyLocation assemblyName="System.Reactive.Linq" processorArchitecture="MSIL" location="Packages/Rx-Linq.2.2.5/lib/net45/System.Reactive.Linq.dll" />
     <AssemblyLocation assemblyName="System.Reactive.PlatformServices" processorArchitecture="MSIL" location="Packages/Rx-PlatformServices.2.2.5/lib/net45/System.Reactive.PlatformServices.dll" />
     <AssemblyLocation assemblyName="System.Resources.Extensions" processorArchitecture="MSIL" location="Packages/System.Resources.Extensions.8.0.0/lib/net462/System.Resources.Extensions.dll" />
     <AssemblyLocation assemblyName="System.Runtime.CompilerServices.Unsafe" processorArchitecture="MSIL" location="Packages/System.Runtime.CompilerServices.Unsafe.6.1.0/lib/net462/System.Runtime.CompilerServices.Unsafe.dll" />
+    <AssemblyLocation assemblyName="System.Threading.Tasks.Extensions" processorArchitecture="MSIL" location="Packages/System.Threading.Tasks.Extensions.4.5.4/lib/net461/System.Threading.Tasks.Extensions.dll" />
+    <AssemblyLocation assemblyName="TorchSharp" processorArchitecture="MSIL" location="Packages/TorchSharp.0.105.0/lib/netstandard2.0/TorchSharp.dll" />
+    <AssemblyLocation assemblyName="TorchVision" processorArchitecture="MSIL" location="Packages/TorchVision.0.105.0/lib/netstandard2.0/TorchVision.dll" />
     <AssemblyLocation assemblyName="WeifenLuo.WinFormsUI.Docking" processorArchitecture="MSIL" location="Packages/DockPanelSuite.3.1.1/lib/net40/WeifenLuo.WinFormsUI.Docking.dll" />
     <AssemblyLocation assemblyName="WeifenLuo.WinFormsUI.Docking.ThemeVS2015" processorArchitecture="MSIL" location="Packages/DockPanelSuite.ThemeVS2015.3.1.1/lib/net40/WeifenLuo.WinFormsUI.Docking.ThemeVS2015.dll" />
     <AssemblyLocation assemblyName="YamlDotNet" processorArchitecture="MSIL" location="Packages/YamlDotNet.16.3.0/lib/net47/YamlDotNet.dll" />
+    <AssemblyLocation assemblyName="Yolo.Torch" processorArchitecture="MSIL" location="Packages/Yolo.Torch.1.0.0/lib/netstandard2.0/Yolo.Torch.dll" />
     <AssemblyLocation assemblyName="ZedGraph" processorArchitecture="MSIL" location="Packages/ZedGraph.5.1.7/lib/net35-Client/ZedGraph.dll" />
   </AssemblyLocations>
   <LibraryFolders>
@@ -140,5 +200,9 @@
     <LibraryFolder path="Packages/Microsoft.Web.WebView2.1.0.2792.45/runtimes/win-x86/native_uap" platform="x86" />
     <LibraryFolder path="Packages/OpenCV.Net.3.4.2/runtimes/win-x64/native/vc14/bin" platform="x64" />
     <LibraryFolder path="Packages/OpenCV.Net.3.4.2/runtimes/win-x86/native/vc14/bin" platform="x86" />
+    <LibraryFolder path="Packages/SkiaSharp.NativeAssets.Win32.2.88.6/runtimes/win-arm64/native" platform="arm64" />
+    <LibraryFolder path="Packages/SkiaSharp.NativeAssets.Win32.2.88.6/runtimes/win-x64/native" platform="x64" />
+    <LibraryFolder path="Packages/SkiaSharp.NativeAssets.Win32.2.88.6/runtimes/win-x86/native" platform="x86" />
+    <LibraryFolder path="Packages/TorchSharp.0.105.0/runtimes/win-x64/native" platform="x64" />
   </LibraryFolders>
 </PackageConfiguration>
